--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.9.11",
+    "@types/next-redux-wrapper": "^3.0.0",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools-extension": "^2.13.2",
+    "@types/yup": "^0.32.0",
+    "i18next": "^22.4.10",
     "next": "13.1.6",
+    "next-i18next": "^13.1.5",
+    "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.1",
+    "react-i18next": "^12.1.5",
+    "react-icons": "^4.7.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2",
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
@@ -19,6 +33,7 @@
     "@types/react-dom": "18.0.11",
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
+    "redux-devtools-extension": "^2.13.9",
     "typescript": "4.9.5"
   }
 }
