--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^2.9.11",
+    "@types/axios": "^0.14.0",
     "@types/next-redux-wrapper": "^3.0.0",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/yup": "^0.32.0",
+    "axios": "^1.3.4",
     "i18next": "^22.4.10",
     "next": "13.1.6",
     "next-i18next": "^13.1.5",
