--- a/package.json
+++ b/package.json
@@ -22,12 +22,10 @@
     "next-redux-wrapper": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-hook-form": "^7.43.1",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2",
-    "yup": "^1.0.0"
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
