--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
+    "react-slick": "^0.29.0",
     "redux": "^4.2.1",
-    "redux-thunk": "^2.4.2"
+    "redux-thunk": "^2.4.2",
+    "slick": "^1.12.2"
   },
   "devDependencies": {
     "@types/node": "18.13.0",
