--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^2.9.11",
     "@types/axios": "^0.14.0",
     "@types/next-redux-wrapper": "^3.0.0",
+    "@types/react-paginate": "^7.1.1",
     "@types/redux": "^3.6.0",
     "@types/redux-devtools-extension": "^2.13.2",
     "@types/yup": "^0.32.0",
@@ -24,6 +25,7 @@
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
+    "react-paginate": "^8.1.4",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
