--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-i18next": "^12.1.5",
     "react-icons": "^4.7.1",
     "react-paginate": "^8.1.4",
+    "react-share": "^4.4.1",
     "react-slick": "^0.29.0",
     "redux": "^4.2.1",
     "redux-thunk": "^2.4.2",
