--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,10 @@
 {
-    "extends": "next"
-}
+    "extends": [
+      "next",
+      "next/core-web-vitals"
+    ],
+    "rules": {
+      "react/react-in-jsx-scope": "off"
+    }
+  }
   
