--- a/.eslintrc
+++ b/.eslintrc
@@ -1,10 +1,7 @@
 {
-    "extends": [
-      "next",
-      "next/core-web-vitals"
-    ],
+    "extends": "next",
     "rules": {
-      "react/react-in-jsx-scope": "off"
+      "react/no-unescaped-entities": "off",
+      "@next/next/no-page-custom-font": "off"
     }
   }
-  
