--- a/package.json
+++ b/package.json
@@ -32,6 +32,9 @@
     "redux-thunk": "^2.4.2",
     "slick": "^1.12.2"
   },
+  "engines": {
+    "node": ">=14.18.0"
+  },
   "devDependencies": {
     "@types/node": "18.13.0",
     "@types/react": "18.0.28",
